# livraria-2k23

./: pyproject.toml
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0002_livro_capa.py  0003_autor.py  0004_livro.py  0005_livro_autores.py
livraria/models/: autor.py  livro.py
livraria/serializers/: __init__.py  livro.py
livraria/views/: autor.py  livro.py
usuario/migrations/: 0001_initial.py
