[project]
name = "livraria"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LuizBlume", email = "luiz.fernando.251107@gmail.com"},
]
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "django-cors-headers>=4.7.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
